# ubuntu_c_action

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: gcc.yml  macos_ubuntu.yml  main.yml  ubuntu.yml
cmakeliststxt/: CMakeLists.txt
cmakepresets/: CMakeList.txt  CMakeLists.txt  CMakePresets.json  main.cpp  test.cpp  test.pb.cc  test.pb.h  test.proto  vcpkg.json
